third_party/move/move-compiler-v2/tests/lambda/inline-parity/multi_param.lambda.exp

Diagnostics:
error: captured variable `result` cannot be modified inside of a lambda
   ┌─ tests/lambda/inline-parity/multi_param.move:21:13
   │
21 │             result = result + f(&elem.k, &mut elem.v);
   │             ^^^^^^
